# vibeX-rish-shell

./: README-zh-CN.md  README.md  gradle.properties  settings.gradle.kts  validate_resources.sh
.git_backup_by_agent/: config  index  packed-refs
.git_backup_by_agent/logs/refs/heads/: main
.git_backup_by_agent/objects/pack/: pack-faae1985f122c437aa5c5b33b1aeca3b1c5b4349.idx  pack-faae1985f122c437aa5c5b33b1aeca3b1c5b4349.pack
.git_backup_by_agent/refs/heads/: main
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mitre_gram.cpp
app/src/main/java/com/vibe/termplugin/: MitreGramNative.java  NativeLib.java  RishShellActivity.java  ShizukuIntegration.java
app/src/main/java/com/vibe/termplugin/adrt/: ADRTLogCatReader.java  ADRTSender.java
app/src/main/java/com/vibe/termplugin/tasker/: TaskerActivity.java
app/src/main/jniLibs/arm64-v8a/: README.txt
app/src/main/jniLibs/armeabi-v7a/: README.txt
app/src/main/res/drawable/: ic_clear.xml  ic_launcher_foreground.xml  ic_send.xml  md3_background_surface.xml  md3_button_primary.xml  md3_button_secondary.xml  md3_dialog_background.xml  md3_header_background.xml  md3_icon_button_background.xml  md3_input_background.xml  md3_input_container_background.xml  md3_surface_container.xml  md3_terminal_background.xml  md3_text_field_background.xml
app/src/main/res/raw/: readme.txt  rish
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: tasker_plugin.xml
app/src/main/shell/: rish
